<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_direction"
        android:icon="@drawable/ic_directions_bike_black_48dp"
        android:title="@string/nav_title_direction"/>

    <item
        android:id="@+id/nav_route"
        android:icon="@drawable/ic_trending_up_black_48dp"
        android:title="@string/nav_title_route" />
    <item
        android:id="@+id/nav_weather"
        android:icon="@drawable/ic_wb_sunny_black_48dp"
        android:title="@string/nav_title_weather"/>

    <item
        android:id="@+id/nav_compatable"
        android:icon="@drawable/ic_home_black_48dp"
        android:title="@string/nav_title_com"/>

    <item
        android:id="@+id/nav_sms"
        android:icon="@drawable/ic_sms_black_48dp"
        android:title="@string/nav_title_timetask"/>

    <item
        android:id="@+id/nav_alarm"
        android:icon="@drawable/ic_alarm_black_48dp"
        android:title="@string/action_settings"/>

    <item
        android:id="@+id/nav_about"
        android:icon="@drawable/ic_android_black_48dp"
        android:title="@string/nav_title_ajm"
        />
</menu>