<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/about_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/white"
    tools:context="app.cap.ajm.Activity.PermissionActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="20sp"
        android:text="@string/permission"/>
        <View
            android:id="@+id/separator"
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/textView"
            android:background="@color/primary_dark">
        </View>

    <TextView
        android:id="@+id/sonucTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_below="@+id/separator"
        android:text="@string/permission_role_location"
        android:textSize="15sp"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:maxLines="50"
        android:scrollbars="vertical" />

    <Button
        android:id="@+id/buttons"
        android:layout_below="@+id/sonucTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="@dimen/_50dp"
        android:background="@color/red"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_centerInParent="true"
        android:text="@string/start_app"/>
</RelativeLayout>
